Colaboratory를 통해 생성됨

--- a/Model/0-LSTM-air-pollution.ipynb
+++ b/Model/0-LSTM-air-pollution.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled24.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNLGq7o+jMfiO48zJfuqg6E",
+      "authorship_tag": "ABX9TyO8RU0ETRNzjyoP6JAfrIT6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/JSJeong-me/KOSA-Big-Data_Vision/blob/main/Model/0-LSTM-air-pollution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WGwulDah8xcu"
+      },
+      "source": [
+        "### https://machinelearningmastery.com/multivariate-time-series-forecasting-lstms-keras/"
       ]
     },
     {
